--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <p><a href="https://www.makeschool.com/academy/track/ramp-0/tutorial/classes" target="blank">Instructions</a></p>
-    <h1>Presh's Plentiful Plants</h1> <!-- #1 Add your name -->
+    <h1>Precious Listana's Plentiful Plants</h1> <!-- #1 Add your name -->
   </body>
 </html>
